<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.collections.CollectionFragment">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/daily"
            android:text="@string/daily_collection"
            android:textSize="15sp"
            android:checked="true"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weekly"
            android:text="@string/weekly_collection"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/monthly"
            android:text="@string/monthly_collection"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"/>

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerview"
        tools:listitem="@layout/collection_item"
        app:layout_constraintTop_toBottomOf="@+id/radio"/>

</androidx.constraintlayout.widget.ConstraintLayout>