<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_lefts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.04136253" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_rights"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="90dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="@id/guideline_lefts"
                    app:layout_constraintRight_toRightOf="@id/guideline_rights"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/aadhar_no"
                        android:textColorHint="@color/labelrecyclerview"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        android:focusable="true"
                        app:boxStrokeColor="@color/newtheme_2"
                        app:fontFamily="@font/dmsans_regular">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/adharnumber_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_baseline_person_24"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="50"
                            android:focusable="true"
                            android:textColor="@color/labelrecyclerview"
                            app:fontFamily="@font/dmsans_regular" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/first_name"
                        android:textColorHint="@color/labelrecyclerview"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        android:focusable="true"
                        app:boxStrokeColor="@color/newtheme_2"
                        app:fontFamily="@font/dmsans_regular">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/firstname_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_baseline_person_24"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="50"
                            android:focusable="true"
                            android:textColor="@color/labelrecyclerview"
                            app:fontFamily="@font/dmsans_regular" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/last_name"
                        android:textColorHint="@color/labelrecyclerview"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/newtheme_2"
                        app:fontFamily="@font/dmsans_regular">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lastname_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_baseline_person_24"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="50"
                            android:textColor="@color/labelrecyclerview"

                            app:fontFamily="@font/dmsans_regular" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/gender"
                        android:textColorHint="@color/labelrecyclerview"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/newtheme_2"
                        app:endIconTint="@color/labelrecyclerview"

                        app:fontFamily="@font/dmsans_regular">

                        <AutoCompleteTextView
                            android:id="@+id/gender_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/Gender"
                            android:importantForAutofill="no"
                            android:inputType="none"
                            android:textColor="@color/labelrecyclerview"

                            app:fontFamily="@font/dmsans_regular" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/father_name"
                        android:textColorHint="@color/labelrecyclerview"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/newtheme_2"
                        app:fontFamily="@font/dmsans_regular">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_baseline_person_24"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@color/labelrecyclerview"
                            app:fontFamily="@font/dmsans_regular" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/address"
                        android:textColorHint="@color/labelrecyclerview"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/newtheme_2"
                        app:fontFamily="@font/dmsans_regular">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_baseline_add_location_24"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="10"

                            android:paddingLeft="@dimen/desc_padding"
                            android:paddingRight="@dimen/desc_padding"
                            android:textColor="@color/labelrecyclerview"

                            app:fontFamily="@font/dmsans_regular" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="12dp"
                        android:hint="Post"
                        android:textColorHint="@color/labelrecyclerview"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/newtheme_2"
                        app:fontFamily="@font/dmsans_regular">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pincode_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="6"
                            android:textColor="@color/labelrecyclerview" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/mobile_number"
                        android:textColorHint="@color/labelrecyclerview"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/newtheme_2"
                        app:fontFamily="@font/dmsans_regular">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mobilenumber_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_baseline_phone_24"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="10"
                            android:textColor="@color/labelrecyclerview" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/dob"
                        android:textColorHint="@color/labelrecyclerview"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/birth_Label_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
                            android:imeOptions="actionNext"
                            android:inputType="none"
                            android:textColor="@color/labelrecyclerview"

                            app:fontFamily="@font/dmsans_regular"

                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/calllayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/photo_Label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="16dp"
                            android:singleLine="true"
                            android:text="Call the driver"
                            android:textColor="@color/labelrecyclerview"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:visibility="visible"
                            app:layout_constraintEnd_toEndOf="@+id/guideline_center"
                            app:layout_constraintWidth_percent="50" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/call"
                            android:layout_width="70dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:src="@drawable/telephone_call"
                            android:visibility="visible"
                            app:layout_constraintBottom_toBottomOf="@id/photo_Label"
                            app:layout_constraintLeft_toRightOf="@id/photo_Label" />


                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/next"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end|bottom"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_baseline_navigate_next_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/calllayout" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>